# mcp-client-example

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: ci.yml
src/mcp_client/: __main__.py  client.py
tests/: test_client.py  test_main.py
