[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP Client Example - A client for the Model Control Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mindsight Ventures", email = "info@mindsight.ai" }
]
dependencies = [
    "anthropic>=0.49.0",
    "mcp>=1.3.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.2.2",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disable_error_code = ["attr-defined", "assignment", "arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=80"
